[project]
name = "uop-sql-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Samantha Atkins", email = "samantha@sjasoft.com" }]
requires-python = ">=3.12"
dependencies = [
    "uop-core",
    "uop-meta",
    "pydantic",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
